# PicShot-1

./: CMakeLists.txt  README.md  build.bat  main.cpp
XCore/: CMakeLists.txt  XSysInfo.cpp  XSysInfo.h  x_global.h  xglobal.h
src/winscreen/: rectcalcu.cpp  rectcalcu.h  screenshot.cpp
